bridge edge loops joining vertecies that are far away #36211

Closed
opened 2013-07-18 16:22:41 +02:00 by mathieu menuet · 11 comments

%%%--- Operating System, Graphics card ---
all

- Blender version with error, and version that worked ---

2.68 release

- Short description of error ---

using bridge edge loops on the attached blend-file doesn't connect the nearest vertices of each edge loops on the right peak.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open attached file
  2. Use "bridge edge loops"
  3. On the right tip, junction are made between wrong vertices (not the nearest ones), giving bad geometry.

%%%

%%%--- Operating System, Graphics card --- all - Blender version with error, and version that worked --- 2.68 release - Short description of error --- using bridge edge loops on the attached blend-file doesn't connect the nearest vertices of each edge loops on the right peak. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1) Open attached file 2) Use "bridge edge loops" 3) On the right tip, junction are made between wrong vertices (not the nearest ones), giving bad geometry. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Checked the report, this is a bit of a corner case, it could be made to work well but this is also a limit with the current method the bridge tool uses.%%%

%%%Checked the report, this is a bit of a corner case, it could be made to work well but this is also a limit with the current method the bridge tool uses.%%%
Author

%%%Hi Campbell,
Thanks for the confirmation. In our typical use case at our Highscool, our students are having this nearly every time. So for us it's more of a normal than corner case. The current workaround is to export to Sketchup and then reimport the triangulated mesh back, which is not optimal.%%%

%%%Hi Campbell, Thanks for the confirmation. In our typical use case at our Highscool, our students are having this nearly every time. So for us it's more of a normal than corner case. The current workaround is to export to Sketchup and then reimport the triangulated mesh back, which is not optimal.%%%

%%%I should mention, in this case Scanfill mesh->faces->fill, (alt+f).
works better since one loop is inside the other.

%%%

%%%I should mention, in this case Scanfill mesh->faces->fill, (alt+f). works better since one loop is inside the other. %%%

%%%fixed r60210.%%%

%%%fixed r60210.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks a lot Campbell.%%%

%%%Thanks a lot Campbell.%%%
Author

A Regression happened here, the attached file edgeloops are briged well in 2.69 but not in 2.70/latest SVN anymore.

A Regression happened here, the attached file edgeloops are briged well in 2.69 but not in 2.70/latest SVN anymore.

@bliblubli, tested, works fine 5d63f162d5, (also we're not on svn anymore).

can you show an image of how it fails?

@bliblubli, tested, works fine 5d63f162d5, (also we're not on svn anymore). can you show an image of how it fails?
Author

@ideasman42 I meant GIT, but too used to say SVN ^^. Just tested on Linux, works for me too, weird. Still on Windows 7 64bit, it didn't, but I've no access to Windows ATM. I'll try to test it further tomorrow.

@ideasman42 I meant GIT, but too used to say SVN ^^. Just tested on Linux, works for me too, weird. Still on Windows 7 64bit, it didn't, but I've no access to Windows ATM. I'll try to test it further tomorrow.
Author

After several test on different machines, all work with latest buildbot. After a clean install, my version worked again too, don't know what happened. Please excuse me for the wrong report.
Kind regards

After several test on different machines, all work with latest buildbot. After a clean install, my version worked again too, don't know what happened. Please excuse me for the wrong report. Kind regards
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36211
No description provided.