fix [#36211] bridge edge loops joining vertecies that are far away

for bridge use a different beautify method when edge loops have non-matching loop count (simple face-angle comparison).