source/blender/bmesh/operators/bmo_bridge.c
@@ -421,8 +421,8 @@ static void bridge_loop_pair(BMesh *bm,
 
 
 		BMO_op_initf(bm, &op_sub, 0,
-		             "beautify_fill faces=%hf edges=ae use_restrict_tag=%b",
-		             BM_ELEM_TAG, true);
+		             "beautify_fill faces=%hf edges=ae use_restrict_tag=%b method=%i",
+		             BM_ELEM_TAG, true, 1);
 
 		if (use_edgeout) {
 			BMOIter siter;
